--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
+# Maven build directory
+/target/
+backend/target/
+
+# macOS system files
+.DS_Store
 # Maven build
 target/
+
+
+
+
+
 *.log
 
 # IDE files
